# Controla

./: .gitignore  Diagram.md  LICENSE  Makefile  Prompt.md  README.md  noxfile.py  pyproject.toml  ruff.toml  task_1.md  task_10.md  task_11.md  task_12.md  task_13.md  task_14.md  task_15.md  task_16.md  task_2.md  task_3.md  task_4.md  task_5.md  task_6.md  task_7.md  task_8.md  task_9.md
configs/: agent.yaml  browser_selectors.yaml  logging.yaml
db/migrations/: alembic.ini  env.py  script.py.mako
db/migrations/versions/: 0001_initial.py
db/models/: __init__.py  app.py  app_session.py  audit_log.py  base.py  device.py  override.py  user.py  web_domain.py  web_session.py
db/queries/: maintenance.sql  reports.sql
docs/: File_Structure.md  Work_Flow.md
schema/: app_session.schema.json  web_session.schema.json
scripts/: bench_foreground.py  db_migrate.py  dev.ps1  export_csv.py  health_check.ps1  seed_fake_data.py
