[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "controla"
version = "0.1.0"
description = "Windows monitoring agent skeleton"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "SQLAlchemy>=2.0",
    "alembic>=1.11",
]
